# soccer-analytics-pipeline

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
athena/: gold.sql
docs/: gold.md  index.md  silver.md
docs/architecture/: data-model.md  overview.md
docs/getting-started/: configuration.md  installation.md
docs/stylesheets/: extra.css
docs/usage/: examples.md
env_files/: .env.example
notebooks/: 01_bronze.ipynb  02_silver.ipynb  03_gold.ipynb
