[project]
name = "soccer-analytics-pipeline"
version = "0.1.0"
description = "Solução modular para transformar dados brutos de futebol em insights acionáveis. Da ingestão à análise, com suporte a AWS Athena e ferramentas de dashboard."
authors = [
    {name = "Matheus Fabião", email = "matheusfabiao.dev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "ruff>=0.11.10",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR2004']  # Ignore Magic Values Lint Error

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

up = 'docker-compose up -d'

pre_down = 'docker-compose stop'
down = 'docker-compose down'

docs = 'mkdocs serve'